# PapersTeleBot

./: .gitignore  README.md  pyproject.toml
papersbot/: bot.py  extraction.py  format.py  formatting.py  paperswithcode_scraper.py
